# deep-research-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  cspell.json  pyproject.toml  research.md
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
docs/: api-reference.md  architecture.md  development.md  modules.md
scripts/: smoke_test.py
src/research_agent/: config.py  logging.py  registry.py
src/research_agent/agent/: __init__.py  dependencies.py  graph.py  nodes.py  state.py
src/research_agent/api/: auth.py  container.py  dependencies.py  main.py  middleware.py  rate_limiter.py  schemas.py
src/research_agent/api/routes/: health.py  research.py
src/research_agent/llm/: __init__.py  huggingface.py  protocols.py  registry.py
src/research_agent/memory/: __init__.py  mem0.py  protocols.py  registry.py
src/research_agent/models/: __init__.py  research.py
src/research_agent/retrieval/: __init__.py  bm25.py  collection.py  embedder.py  hybrid.py  protocols.py  registry.py  reranker.py
src/research_agent/tools/: __init__.py  firecrawl.py  protocols.py  registry.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_hybrid_retriever_integration.py
tests/unit/: test_agent_dependencies.py  test_agent_graph.py  test_agent_nodes.py  test_agent_state.py  test_api_dependencies.py  test_api_schemas.py  test_app_factory.py  test_auth_dependencies.py  test_bm25_encoder.py  test_collection.py  test_config.py  test_container.py  test_embedder.py  test_firecrawl_tools.py  test_flashrank_reranker.py  test_huggingface_client.py  test_hybrid_retriever.py  test_llm_protocols.py  test_logging.py  test_mem0_service.py  test_memory_protocols.py  test_middleware.py  test_models_research.py  test_registry.py  test_retrieval_protocols.py  test_routes.py  test_subsystem_registries.py  test_tool_protocols.py
