[project]
name = "research-agent"
version = "0.1.0"
description = "Modular deep research agent: LangGraph orchestration, hybrid Qdrant retrieval, Mem0 memory, Firecrawl via MCP"
readme = "README.md"
authors = [
    { name = "objones25", email = "59661118+objones25@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Orchestration
    "langgraph>=0.3",
    # LLM inference
    "huggingface-hub>=0.27",
    # Vector DB (async client required)
    "qdrant-client>=1.12",
    # BM25 sparse retrieval
    "rank-bm25>=0.2",
    # Reranking
    "flashrank>=0.2",
    # Memory
    "mem0ai>=0.1",
    # Web acquisition via MCP
    "mcp[cli]>=1.5",
    # API layer
    "fastapi[standard]>=0.115",
    # Settings
    "pydantic-settings>=2.7",
    # Async HTTP (no requests in this codebase)
    "httpx>=0.28",
    # JWT auth
    "pyjwt>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "black>=25.1",
    "ruff>=0.9",
    "mypy>=1.15",
    # Type stubs
    "types-pyjwt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["research_agent"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "flashrank.*",
    "rank_bm25.*",
    "mem0.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=95"
markers = [
    "unit: fast, isolated unit tests (no I/O)",
    "integration: tests that require live external services (Qdrant, Mem0, etc.)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
